# cera-lgn

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  docker.dockerfile  invoker.py  pyproject.toml  requirements.txt
cardgetter/: smokespew.py
docs/: __data.js  __data.json  index.html  inventory.html  manifest.json  vite-manifest.json
drafthandler/: draft_class.py  draft_test.py  draftbot.py  draftbot2.py  glintwing.py  tourney_class.py
draftscript/: bag.lua  main.lua
exports/: tts_output.py
exporttemplates/: tts_import.py  tts_output.py
flamewave/: __init__.py  collection_import.py  cubecobra.go  cubecobra.py  docker.dockerfile  draftmancer.py  flamewave_classes.py  getFlamewaveCard.js  go.mod  go.sum  main.go  mongo-init.js  mse.py  package-lock.json  package.json  planesculptors.py  postCollection.js  postCustom.js  pushupdate.js  tts_classes.py  tts_import.py  tts_parse.py  utils.go
glintwing/: __init__.py  blossom.py  draft_class.py  draft_class_v2.py  draft_test.py  tourney_class.py
packcreator/: afr_2.json  p1p1.py  p_caller.py  p_creator.py  packbot.py  packcreator.py  packmanager.py  point_slicer.py  set_template.json  set_template_3.json  starlight.py  tts_output.py
pagessite/: .gitignore  index.html  package.json  svelte.config.js  vite.config.js
scripts/: jsonBuilder.ipynb  jsonBuilder.py
starlight/: __init__.py  number_generator.py  p1p1.py  p_caller.py  p_generation.py  p_getter.py  v2_template.json  v3_template.json
stonewood/: __init__.py  flamewave.py  glintwing.py  invoker.py  starlight.py  (+5 more)
(+332 files in other folders)
